# 3dgs-pytorch

./: .gitignore  LICENSE  README.md  control.py  dataset.py  evaluate.py  gaussian.py  inference.py  main.py  pyproject.toml  rasterizer.py  sh.py  train.py  utils.py
configs/: full_scene_paper.yaml  medium_scene.yaml  mini_scene.yaml
docs/: tutorial.md
scripts/: download_lego.sh
src/gs/: control.py  dataset.py  evaluate.py  gaussian.py  rasterizer.py  train.py  utils.py
