[project]
name = "3dgs-pytorch"
version = "0.1.0"
description = "A pure-PyTorch implementation of 3D Gaussian Splatting, written for understanding the algorithm."
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.5",
    "numpy>=1.26",
    "pillow>=10",
    "tqdm>=4.66",
    "plyfile>=1.0",
    "imageio>=2.34",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "torchmetrics>=1.0",
    "tensorboard>=2.15",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8",
    "ipykernel>=6",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
